--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,7 @@
     <string name="title_notifications">Notifications</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="tmdbey">api_key=99453365bfe4540972684d60cf0c1b02</string>
+    <string name="tmdbbase">https://api.themoviedb.org/3/</string>
 </resources>
